# vllm

./: estimate_batch_size.py  module_params.py  requirements-cuda.txt  run_pyinstrument.sh  run_pyspy.sh  test_logprobs.py  test_multithreaded_pg.py  vllm_logging_config.json  weakdict.py
cuda_driver/: CMakeLists.txt  configure.sh  convert_cuda.py  loadPtx.cpp  loadPtx.cu  run_vector_add.sh  vector_add.cu  vector_add.cubin  vector_add.ptx  vector_add.ptx.cpp
cuda_driver/binaries/: vector_add.cubin.cpp
examples/offline_inference/: profiling.py
examples/offline_inference/basic/: .viztracerrc  basic.py  generate.trace_1644513.json  instrumented_basic.py  llm.init.trace_1644513.json  verbose_example.sh
experiments/: basic.py  basic_debug.py  llm_engine_example.py  tracer.py
scratch/: basic.py
scripts/: analyze_trace.py  profile_qwen3.py  run_profile.sh
tests/: conftest.py
tests/kernels/: test_moe.py  utils.py
tests/models/: debug_model_init.py  registry.py  test_initialization.py
tests/models/decoder_only/vision_language/: test_qwen2_vl.py
vllm/: config.py  debugging.py  envs.py  logger.py
vllm/attention/: layer.py  selector.py
vllm/compilation/: backends.py
vllm/engine/: llm_engine.py
vllm/entrypoints/: llm.py
vllm/model_executor/layers/: linear.py
vllm/model_executor/model_loader/: __init__.py  default_loader.py  utils.py
vllm/model_executor/models/: qwen2.py  qwen3.py  qwen3_moe.py  registry.py
vllm/multimodal/: registry.py
vllm/v1/core/sched/: output.py
vllm/v1/engine/: core.py  core_client.py  llm_engine.py
vllm/v1/worker/: gpu_model_runner.py  gpu_worker.py
(+2 files in other folders)
